--- a/stylesheet.css
+++ b/stylesheet.css
@@ -339,16 +339,16 @@ footer p {
     border-color: #04b2d4;
 }
 .satu {
-    background-image: url(undraw_personal_site_xyd1.svg);
+    background-image: url(./undraw_personal_site_xyd1.svg);
 }
 .dua {
-    background-image: url(undraw_mobile_apps_spmp.svg);
+    background-image: url(./undraw_mobile_apps_spmp.svg);
 }
 .tiga {
-    background-image: url(undraw_responsive_6c8s.svg);
+    background-image: url(./undraw_responsive_6c8s.svg);
 }
 .empat {
-    background-image: url(undraw_social_networking_nqk4.svg);
+    background-image: url(./undraw_social_networking_nqk4.svg);
 }
 
 
